--- a/POST-IT/post_it.html
+++ b/POST-IT/post_it.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post_It</title>
     <link rel="stylesheet" href="post_it1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inter:wght@300;400&family=Splash&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="full_sidebar">
@@ -27,6 +30,7 @@
         </div>
         <div class="material_down">
             <div class="name_bigbox">
+                <img class="placehold_image"src="exp/P1120783.JPG" alt="img not available">
                 <div class="name_container">
                     Ranadheer
                 </div>
@@ -37,6 +41,33 @@
         </div>
     </div>
     <!-- sidebar by Ranadheer -->
+
+
+
+</div>
+<rec8>
+    <ellipse class="p1">
+    <img src="/HOME.jpg"style="border-radius: 50%;width: 40px;height: 40px;"><br>Name</ellipse></img>
+    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+  </svg>
+</rec8>
+
+<rec7>
+  <ellipse class="p1">
+  <img src="/HOME.jpg" style="border-radius: 50%;width: 40px;height: 40px;"><br>Name</ellipse></img>
+    <svg xmlns="http://www.w3.org/2000/svg" width="8%" height="8%" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+    </svg>
+    <div class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore asperiores assumenda, ullam blanditiis consequuntur officiis expedita labore consequatur delectus est earum nam molestias neque quis ab magni voluptatem quia odio.</div>
+    <svg xmlns="http://www.w3.org/2000/svg" width="7.5%" height="7.5%" fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
+        <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+    </svg>
+</rec7>
+
+</body>
+</html>
 
 
 
