Front page updated

--- a/POST-IT/post_it.html
+++ b/POST-IT/post_it.html
@@ -44,16 +44,17 @@
 
 
 
-    <rec8>
+</div>
+<rec8>
     <ellipse class="p1">
     <img src="/HOME.jpg"style="border-radius: 50%;width: 40px;height: 40px;"><br>Name</ellipse></img>
     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
     <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
     <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
   </svg>
-    </rec8>
+</rec8>
 
-    <rec7>
+<rec7>
   <ellipse class="p1">
   <img src="/HOME.jpg" style="border-radius: 50%;width: 40px;height: 40px;"><br>Name</ellipse></img>
     <svg xmlns="http://www.w3.org/2000/svg" width="8%" height="8%" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
@@ -63,33 +64,11 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="7.5%" height="7.5%" fill="currentColor" class="bi bi-chat-left" viewBox="0 0 16 16">
         <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
     </svg>
-    </rec7>
-    <!-- Center by Shivaji and Hemanth -->
+</rec7>
 
+</body>
+</html>
 
-
-
-
-    <div class="right_sidebar">
-        <div class="r_material_top">
-            <div class="search_bar">
-                <div class="search">
-                    <img class="r_logo1" src="exp/search.png" alt="">
-                    <h2 class="search_text">Search</h2>
-                </div>
-            </div>
-            <div class="trending">
-                <img class="r_logo2" src="exp/Vector (2).png" alt="">
-                <h2 class="trending_text">Trending</h2>
-            </div>
-        <div class="r_material_down">
-            <div class="bigbox">
-                <div class="one_text">
-                    One Piece is going to end in 5 years!!  : Echiro Oda
-                </div>
-                <img class="r_placehold_image"src="exp/wanpisu.jpg" alt="img not available">
-            </div>
-    </div>
 
 
 
